--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "MERN stack backend",
+  "description": "bkclothing store",
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/server.js",
@@ -14,10 +14,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^6.1.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.10"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
