--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "babel src middleware models routes --out-dir dist",
-    "server": "nodemon --exec babel-node src/server.js",
+    "server": "nodemon --experimental-modules --es-module-specifier-resolution=node src/server.mjs",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
+  "type":"module" ,
   "author": "khalid ibrahim",
   "license": "ISC",
   "dependencies": {
