--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,10 @@
     "start": "babel src middleware models routes --out-dir dist",
     "server": "nodemon --experimental-modules --es-module-specifier-resolution=node src/server.mjs",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "test": "jest"
   },
-  "type":"module" ,
+  "type": "module",
   "author": "khalid ibrahim",
   "license": "ISC",
   "dependencies": {
@@ -28,6 +29,7 @@
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7"
   }
 }
